<resources>
    <string name="app_name">GEOSaude</string>
    <string name="title_activity_tabs">TabsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string-array name="Imovel">

        <item>Tipo de Imóvel</item>
        <item>Residência</item>
        <item>Comercio</item>
        <item>Indústria</item>
        <item>Serviço Privado</item>
        <item>Residência com</item>
        <item>Imovel em Construção</item>
        <item>Terreno Baldio</item>
        <item>Ponto Estrategico</item>
        <item>Outros</item>

    </string-array>

    <string-array name="situacao">

        <item>Situação</item>
        <item>Inspecionado</item>
        <item>Não</item>
        <item>Recuperado</item>

    </string-array>

    <string-array name="motivo">

        <item>Motivo</item>
        <item>Fechado</item>
        <item>Desocupado</item>
        <item>Recusado</item>
        <item>Sem o</item>
        <item>NA</item>

    </string-array>

    <string name="login">Login:</string>
    <string name="senha">Senha:</string>

    <string name="tipo_do_imavel">Tipo do Imóvel:</string>
    <string name="resind_ncia">Residência</string>
    <string name="servi_os_privados">Serviços Privados</string>
    <string name="n_mero">Número:</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="rua">Rua:</string>
    <string name="situa_o">Situação:</string>
    <string name="data_da_visita">Data da Visita:</string>
    <string name="tipos_de_criadouro">Tipos de Criadouro:</string>
    <string name="criadouros">Criadouros:</string>
    <string name="tratamento_aedes">Tratamento Aedes:</string>
    <string name="positivo">Positivo</string>
    <string name="mecanico">Mecânico</string>
    <string name="biologico">Biológico</string>
    <string name="qu_mico">Químico</string>
    <string name="deposito">Depósito:</string>
    <string name="fossa">Fossa</string>
    <string name="cisterna">Cisterna</string>
    <string name="bti_g">BTI G</string>
    <string name="grama">Grama:</string>
    <string name="bti_wdg">BTI WDg</string>
    <string name="bsg">BsG</string>


</resources>
