<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:windowSoftInputMode="adjustPan"
    tools:context="br.ufpe.cin.acsb.geosaude.TabsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/criadouros"
            android:textSize="25sp" />

        <CheckBox
            android:id="@+id/A1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="A1"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="48dp" />

        <CheckBox
            android:id="@+id/A2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="A2"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="95dp" />

        <CheckBox
            android:id="@+id/B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="B"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="138dp" />

        <CheckBox
            android:id="@+id/C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="C"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="185dp" />

        <CheckBox
            android:id="@+id/D1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="D1"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="275dp" />

        <CheckBox
            android:id="@+id/D2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="D2"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="227dp" />

        <CheckBox
            android:id="@+id/E"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="E"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="319dp" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="15sp" />

        <TextView
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="20dp"
            android:text="@string/tratamento_aedes"
            android:textSize="25sp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />

        <CheckBox
            android:id="@+id/positivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/positivo"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="48dp" />

        <CheckBox
            android:id="@+id/mecanico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mecanico"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="95dp" />

        <CheckBox
            android:id="@+id/biologico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biologico"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="138dp" />

        <CheckBox
            android:id="@+id/quimico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qu_mico"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="185dp" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="15sp" />
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="15sp" />

    </LinearLayout>
</ScrollView>
