<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:windowSoftInputMode="stateAlwaysHidden"
    tools:context="br.ufpe.cin.acsb.geosaude.TabsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/deposito"
            android:textSize="25sp" />

        <CheckBox
            android:id="@+id/fossa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/fossa"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="48dp" />

        <CheckBox
            android:id="@+id/cisterna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cisterna"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="95dp" />

        <CheckBox
            android:id="@+id/canal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Canal/Canaletas/Valas"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="138dp" />

        <CheckBox
            android:id="@+id/charco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Charco"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="185dp" />

        <CheckBox
            android:id="@+id/caixa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Caixa de Insperção/Drenagem"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="239dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text=""
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="20dp"
            android:text="@string/bti_g"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/deposito"
            android:textSize="20sp" />

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:hint="quantidade"
            android:inputType="numberSigned"
            android:paddingTop="10dp"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="20dp"
            android:text="@string/grama"
            android:textSize="20sp" />

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:hint="quantidade"
            android:inputType="numberSigned"
            android:paddingTop="0dp"
            android:textAlignment="center"
            android:textSize="20sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="20dp"
            android:text="@string/bti_wdg"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/deposito"
            android:textSize="20sp" />

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:hint="quantidade"
            android:inputType="numberSigned"
            android:paddingTop="10dp"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="20dp"
            android:text="@string/grama"
            android:textSize="20sp" />

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:hint="quantidade"
            android:inputType="numberSigned"
            android:paddingTop="0dp"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="20dp"
            android:text="@string/bsg"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/deposito"
            android:textSize="20sp" />

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:hint="quantidade"
            android:inputType="numberSigned"
            android:paddingTop="10dp"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:hint="quantidade"
            android:inputType="numberSigned"
            android:paddingTop="0dp"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>
